add new anime serie functions
